--- a/ApplicationGarage/templates/AppGarage/layout.html
+++ b/ApplicationGarage/templates/AppGarage/layout.html
@@ -10,147 +10,7 @@
     <link rel="stylesheet" href="{% static 'AppGarage/layout.css' %}">
 
 </head>
-<style>
-    * {
-        margin: 0;
-    }
 
-    #nav-bar {
-        height: 200px;
-        width: 100%;
-        top: 0;
-        /* position: sticky; */
-        text-align: right;
-        background-color: rgb(138, 157, 111);
-        background-image: url("{% static 'AppGarage/header.png' %}");
-        background-size: cover;
-        background-size: contain;
-        background-size: 100% 200px;
-        /* <------ */
-        background-repeat: no-repeat;
-        background-position: center center;
-        /* z-index: -1; */
-    }
-
-    ul#list-nav {
-        list-style: none;
-        margin: 20px;
-        padding: 0;
-
-    }
-
-    ul#list-nav li {
-        display: inline;
-    }
-
-
-    ul#list-nav li a {
-        /* position: relative; */
-        background-color: #d0f094;
-        /* margin-top: 50px; */
-        text-decoration: none;
-        padding: 5px 5px;
-        margin: 55px 3px 0 4px;
-
-        border-radius: 8px;
-        color: black;
-        float: left;
-        /* text-align: center; */
-        width: auto;
-    }
-
-    /* 
-    ul#list-nav li a:hover {
-        background: #5f5f5f;
-    } */
-
-
-    .sidebar {
-        height: 100%;
-        width: 0;
-        position: fixed;
-        z-index: 10;
-        top: 0;
-        right: 0;
-        background-color: #111;
-        overflow-x: hidden;
-        transition: 0.5s;
-        padding-top: 60px;
-    }
-
-    .sidebar a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-        transition: 0.3s;
-        text-shadow: black;
-    }
-
-    .sidebar a:hover {
-        color: #f1f1f1;
-    }
-
-    .sidebar .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-    }
-
-
-    .openbtn {
-        font-size: 20px;
-        cursor: pointer;
-        /* background-color: #111; */
-        /* color: white; */
-        padding: 10px 15px;
-        border: none;
-        border-radius: 8px;
-        height: 150px;
-        width: 120px;
-        background-color: rgba(255, 255, 255, 0);
-        background-image: url("{% static 'AppGarage/nav.png' %}");
-        background-size: cover;
-        /* <------ */
-        background-repeat: no-repeat;
-        background-position: center center;
-        top: 0;
-        right: 1.2vw;
-        position: fixed !important;
-
-        z-index: 2;
-        /* position: absolute; */
-        /* position: absolute; */
-        /* top: 0; */
-    }
-
-    .openbtn:hover {
-        background-color: #444;
-    }
-
-    #main {
-        transition: margin-left .5s;
-        padding: 16px;
-    }
-
-    /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-    @media screen and (max-height: 450px) {
-        .sidebar {
-            padding-top: 15px;
-        }
-
-        .sidebar a {
-            font-size: 18px;
-        }
-    }
-
-    /* body {
-        z-index: 1;
-    } */
-</style>
 <div id="nav-bar">
 
     <a href="#"></a>
@@ -158,52 +18,141 @@
 </div>
 <button class="openbtn" onclick="openNav()"></button>
 
+
+
+<div id="mySidebar" class="sidebar">
+
+    <a href="{% url 'magbenta' %}" id="button-sell">Magbenta (Sell)</a>
+    <a href="{% url 'index' %}" id="button-buy">Bumili (Buy)</a>
+    {% if cat %}
+    <details>
+        <summary>Bagay</summary>
+        <ul>
+            <li>
+                <details id="sidebar-category">
+                    <summary>Loob ng Bahay</summary>
+                    <ol>
+                        <!-- SendRequest -->
+
+                        <li><a onclick="SendRequest(id)" id="{% url 'KuhainAngListing' categ='Bagay' %}">Damit</a>
+                        </li>
+                        <li><a onclick="SendRequest(id)" id="{% url 'KuhainAngListing' categ='Bagay' %}">Kung ano
+                                ano</a>
+                        </li>
+                        <li><a onclick="SendRequest(id)" id="{% url 'KuhainAngListing' categ='Bagay' %}">TV</a>
+                        </li>
+                        <li><a onclick="SendRequest(id)" id="{% url 'KuhainAngListing' categ='Bagay' %}">Cellphone</a>
+                        </li>
+
+
+                    </ol>
+                </details>
+
+            </li>
+        </ul>
+    </details>
+    <details>
+        <summary>Hayop</summary>
+        <ul>
+            <li>
+                <details id="sidebar-category">
+                    <summary>Ibon</summary>
+                    <ol>
+                        <li><a onclick="SendRequest(id)" id="{% url 'KuhainAngListing' categ='Hayop' %}">Love Bird</a>
+                        </li>
+                        <li><a onclick="SendRequest(id)" id="{% url 'KuhainAngListing' categ='Hayop' %}">Sunconure</a>
+                        </li>
+                        <li><a onclick="SendRequest(id)" id="{% url 'KuhainAngListing' categ='Hayop' %}">Kalapati</a>
+                        </li>
+                    </ol>
+                </details>
+
+            </li>
+        </ul>
+    </details>
+    <details>
+        <summary>Lupa</summary>
+        <ul>
+            <li>
+                <details id="sidebar-category">
+                    <summary>Upuan o Salumpuwit</summary>
+                    <ol>
+                        <li>Silya sa Lamesa</li>
+                        <li>Silya sa Kusina</li>
+                        <li>Silya sa Bisita</li>
+                    </ol>
+                </details>
+
+            </li>
+        </ul>
+    </details>
+    <details>
+        <summary>Bahay</summary>
+        <ul>
+            <li>
+                <details id="sidebar-category">
+                    <summary>Upuan o Salumpuwit</summary>
+                    <ol>
+                        <li>Silya sa Lamesa</li>
+                        <li>Silya sa Kusina</li>
+                        <li>Silya sa Bisita</li>
+                    </ol>
+                </details>
+
+            </li>
+        </ul>
+    </details>
+    <details>
+        <summary>Pasyalan</summary>
+        <ul>
+            <li>
+                <details id="sidebar-category">
+                    <summary>Upuan o Salumpuwit</summary>
+                    <ol>
+                        <li>Silya sa Lamesa</li>
+                        <li>Silya sa Kusina</li>
+                        <li>Silya sa Bisita</li>
+                    </ol>
+                </details>
+
+            </li>
+        </ul>
+    </details>
+    {% endif %}
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+</div>
+
+
+<script>
+    function openNav() {
+        document.getElementById("mySidebar").style.width = "250px";
+    }
+
+    function closeNav() {
+        document.getElementById("mySidebar").style.width = "0";
+    }
+    Create_ListContainer()
+    function Create_ListContainer() {
+        main_container = document.createElement('div');
+        main_container.id = 'main-container';
+        document.body.appendChild(main_container)
+    }
+
+    function ClearMainContainer() {
+        document.querySelector("#main-container").innerHTML = '';
+    }
+</script>
+
+<script src="https://smtpjs.com/v3/smtp.js"></script>
+<script src="{% static 'AppGarage/contact.js' %}"></script>
+<script src="{% static 'AppGarage/layout.js' %}"></script>
+
+
 <body>
-
-    <div id="mySidebar" class="sidebar">
-        <details>
-            <summary>Mga Kategorya o Uri</summary>
-            <ul>
-                <li>
-                    <details id="sidebar-category">
-                        <summary>Upuan o Salumpuwit</summary>
-                        <ol>
-                            <li>Silya sa Lamesa</li>
-                            <li>Silya sa Kusina</li>
-                            <li>Silya sa Bisita</li>
-                        </ol>
-                    </details>
-
-                </li>
-                <li>Iba pang Kategorya</li>
-            </ul>
-        </details>
-
-        <!-- <a href="#">Alamin ang Tungkol dito</a>
-        <a href="#">Aming Ginagawa</a>
-        <a href="#">Clients</a>
-        <a href="#">Komyunikasyon</a> -->
-        <a href="{% url 'magbenta' %}">Magbenta (Sell)</a>
-        <a href="{% url 'index' %}">Bumili (Buy)</a>
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+    <div id="body-main">
+        {% block body %}
+        {% endblock %}
     </div>
-
-
-    <script>
-        function openNav() {
-            document.getElementById("mySidebar").style.width = "250px";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidebar").style.width = "0";
-        }
-    </script>
-
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <!-- <script src="{% static 'AppGarage/contact.js' %}"></script> -->
-    {% block body %}
-    {% endblock %}
-
     <!-- <div style="height: 1000px;"></div> -->
 </body>
 
